--- a/style.css
+++ b/style.css
@@ -789,5 +789,5 @@
     -ms-pointer-events: none;
     -o-pointer-events: none;
     pointer-events: none;
-    position: absolute
+    position: fixed;
 }
